--- a/index.html
+++ b/index.html
@@ -9,42 +9,30 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<header>
+<header class="header-section">
     <div class="container">
 
         <!-- Navbar section -->
-        <div class="row">
+        <div class="row py-3">
             <div class="col-md-12">
-                <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                    <div class="container">
-                      <a class="navbar-brand" href="#">Navbar</a>
-                      <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                          aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="collapsibleNavId">
-                          <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-                              <li class="nav-item active">
-                                  <a class="nav-link" href="#">Home <span class="visually-hidden">(current)</span></a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="#">Link</a>
-                              </li>
-                              <li class="nav-item dropdown">
-                                  <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                                  <div class="dropdown-menu" aria-labelledby="dropdownId">
-                                      <a class="dropdown-item" href="#">Action 1</a>
-                                      <a class="dropdown-item" href="#">Action 2</a>
-                                  </div>
-                              </li>
-                          </ul>
-                          <form class="d-flex my-2 my-lg-0">
-                              <input class="form-control me-sm-2" type="text" placeholder="Search">
-                              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                          </form>
-                      </div>
-                </div>
-              </nav>
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand w-25" href="index.html">
+                            <img src="assets/images/logo.png" class="img-fluid" alt="LOGO">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-end w-75" id="mainMenu">
+                            <ul class="navbar-nav mt-2 mt-lg-0 fw-normal">
+                                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
             </div>
         </div>
     </div>
