Hero section completed

--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
                 </nav>
             </div>
         </div>
+
+        <div class="row justify-content-around align-items-center py-4">
+            <div class="col-md-6">
+                <a href="#"><img src="assets/images/hero-banner.png" class="img-fluid w-75" alt="Hero Image"></a>
+            </div>
+            <div class="col-md-6 d-flex flex-column justify-content-end">
+                <h2 class="display-4 fw-bold pb-3">
+                    <span class="main-color">Nike React</span>
+                    <br>Infinity Run 2
+                </h2>
+                <p class="text-muted fs-5 pb-2">Lorem Ipsum is simply dummy text of the printing 
+                    and typesetting industry.
+                </p>
+                <a href="#">
+                    <button class="buy-now-btn btn text-uppercase fw-semibold text-white py-3 px-5 rounded-3">
+                        <img src="assets/images/icons/shopping-cart 1.png" class="shopping-cart-img me-2">Buy Now
+                    </button>
+                </a>
+            </div>
+        </div>
     </div>
 </header>
 
