Main section work started

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
         </div>
 
+        <!-- Hero section -->
         <div class="row justify-content-around align-items-center py-4">
             <div class="col-md-6">
                 <a href="#"><img src="assets/images/hero-banner.png" class="img-fluid w-75" alt="Hero Image"></a>
@@ -57,7 +58,13 @@
         </div>
     </div>
 </header>
-
+<main>
+    <div class="container">
+        <div class="row">
+            
+        </div>
+    </div>
+</main>
 
 
 
