--- a/index.html
+++ b/index.html
@@ -132,6 +132,79 @@
                 </div>
             </div>
         </div>
+
+        <!-- Formal shoes section -->
+        <div class="row pt-5 mt-5">
+            <div class="col-md-12">
+                <h3 class="text-uppercase fs-2 fw-bold">Formal Shoes</h3>
+                <div class="row py-4 g-4">
+                    <div class="col-md-4">
+                        <div class="card border-0 bg-white rounded-4 p-2 shadow">
+                            <div class="card-body">
+                                <div class="product-img-box rounded-4 px-5 py-4">
+                                    <img src="assets/images/shoes-4.png" class="img-fluid" alt="Shoes Image">
+                                </div>
+                                <div class="pt-4 pb-2">
+                                    <h4 class="fs-3 fw-bold">Slip-On Formal Shoe</h4>
+                                    <p class="text-muted fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, optio?</p>
+                                    <div class="d-flex justify-content-between align-items-center pt-2">
+                                        <h3 class="main-color fw-bold fs-3">$235</h3>
+                                        <a href="#">
+                                            <button class="buy-now-btn btn text-uppercase text-white py-3 px-5 rounded-3">
+                                                <img src="assets/images/icons/shopping-cart 1.png" class="shopping-cart-img me-2">Buy Now
+                                            </button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card border-0 bg-white rounded-4 p-2 shadow">
+                            <div class="card-body">
+                                <div class="product-img-box rounded-4 px-5 py-4">
+                                    <img src="assets/images/shoes-5.png" class="img-fluid p-3" alt="Shoes Image">
+                                </div>
+                                <div class="pt-4 pb-2">
+                                    <h4 class="fs-3 fw-bold">Slip-On Formal Shoe</h4>
+                                    <p class="text-muted fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, optio?</p>
+                                    <div class="d-flex justify-content-between align-items-center pt-2">
+                                        <h3 class="main-color fw-bold fs-3">$355</h3>
+                                        <a href="#">
+                                            <button class="buy-now-btn btn text-uppercase text-white py-3 px-5 rounded-3">
+                                                <img src="assets/images/icons/shopping-cart 1.png" class="shopping-cart-img me-2">Buy Now
+                                            </button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card border-0 bg-white rounded-4 p-2 shadow">
+                            <div class="card-body">
+                                <div class="product-img-box rounded-4 px-5 py-4">
+                                    <img src="assets/images/shoes-6.png" class="img-fluid pt-3" alt="Shoes Image">
+                                </div>
+                                <div class="pt-4 pb-2">
+                                    <h4 class="fs-3 fw-bold">Slip-On Formal Shoe</h4>
+                                    <p class="text-muted fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, optio?</p>
+                                    <div class="d-flex justify-content-between align-items-center pt-2">
+                                        <h3 class="main-color fw-bold fs-3">$155</h3>
+                                        <a href="#">
+                                            <button class="buy-now-btn btn text-uppercase text-white py-3 px-5 rounded-3">
+                                                <img src="assets/images/icons/shopping-cart 1.png" class="shopping-cart-img me-2">Buy Now
+                                            </button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </main>
 
