Process section completed

--- a/index.html
+++ b/index.html
@@ -205,6 +205,42 @@
             </div>
         </div>
 
+        <!-- Process section -->
+        <div class="row align-items-center pt-5 my-5 g-5">
+            <div class="col-md-6">
+                <div class="row d-flex justify-content-between align-items-center bg-white rounded-4 shadow py-3 px-2 mb-4">
+                    <div class="col-md-4 text-left">
+                        <img src="assets/images/icons/home.png" class="img-fluid w-75 p-3" alt="Home Image">
+                    </div>
+                    <div class="col-md-8">
+                        <h4 class="fw-semibold">Find the Perfect Fit</h4>
+                        <p class="text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-between align-items-center bg-white rounded-4 shadow py-3 px-2 mb-4">
+                    <div class="col-md-4 text-left">
+                        <img src="assets/images/icons/home.png" class="img-fluid w-75 p-3" alt="Home Image">
+                    </div>
+                    <div class="col-md-8">
+                        <h4 class="fw-semibold">Find the Perfect Fit</h4>
+                        <p class="text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-between align-items-center bg-white rounded-4 shadow py-3 px-2 mb-4">
+                    <div class="col-md-4 text-left">
+                        <img src="assets/images/icons/home.png" class="img-fluid w-75 p-3" alt="Home Image">
+                    </div>
+                    <div class="col-md-8">
+                        <h4 class="fw-semibold">Find the Perfect Fit</h4>
+                        <p class="text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="assets/images/icons/shopping-img.png" class="img-fluid p-3" alt="Shopping Image">
+            </div>
+        </div>
+
     </div>
 </main>
 
