--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </div>
 
         <!-- Hero section -->
-        <div class="row justify-content-around align-items-center py-4">
-            <div class="col-md-6">
+        <div class="row flex-column-reverse flex-xl-row justify-content-around align-items-center py-4">
+            <div class="col-xl-6 text-center py-4 text-xl-start py-xl-0">
                 <a href="#"><img src="assets/images/hero-banner.png" class="img-fluid w-75" alt="Hero Image"></a>
             </div>
-            <div class="col-md-6 d-flex flex-column justify-content-end">
-                <h2 class="display-4 fw-bold pb-3">
+            <div class="col-xl-6 d-flex flex-column justify-content-end">
+                <h2 class="display-3 display-md-4 fw-bold pb-3">
                     <span class="main-color">Nike React</span>
                     <br>Infinity Run 2
                 </h2>
@@ -66,7 +66,7 @@
             <div class="col-md-12">
                 <h3 class="text-uppercase fs-2 fw-bold">Casual Shoes</h3>
                 <div class="row py-4 g-4">
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="card border-0 bg-white rounded-4 p-2 shadow">
                             <div class="card-body">
                                 <div class="product-img-box rounded-4 px-5 py-4">
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="card border-0 bg-white rounded-4 p-2 shadow">
                             <div class="card-body">
                                 <div class="product-img-box rounded-4 px-5 py-4">
@@ -108,7 +108,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="card border-0 bg-white rounded-4 p-2 shadow">
                             <div class="card-body">
                                 <div class="product-img-box rounded-4 px-5 py-4">
@@ -138,7 +138,7 @@
             <div class="col-md-12">
                 <h3 class="text-uppercase fs-2 fw-bold">Formal Shoes</h3>
                 <div class="row py-4 g-4">
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="card border-0 bg-white rounded-4 p-2 shadow">
                             <div class="card-body">
                                 <div class="product-img-box rounded-4 px-5 py-4">
@@ -159,7 +159,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="card border-0 bg-white rounded-4 p-2 shadow">
                             <div class="card-body">
                                 <div class="product-img-box rounded-4 px-5 py-4">
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="card border-0 bg-white rounded-4 p-2 shadow">
                             <div class="card-body">
                                 <div class="product-img-box rounded-4 px-5 py-4">
@@ -206,29 +206,29 @@
         </div>
 
         <!-- Process section -->
-        <div class="row align-items-center pt-5 my-5 g-5">
-            <div class="col-md-6">
-                <div class="row d-flex justify-content-between align-items-center bg-white rounded-4 shadow py-3 px-2 mb-4">
+        <div class="row flex-column-reverse flex-xl-row align-items-center pt-5 my-5 g-5">
+            <div class="col-xl-6 text-center text-md-start">
+                <div class="row d-flex justify-content-between align-items-center bg-white rounded-4 shadow py-3 px-3 mb-4">
                     <div class="col-md-4 text-left">
-                        <img src="assets/images/icons/home.png" class="img-fluid w-75 p-3" alt="Home Image">
+                        <img src="assets/images/icons/home.png" class="img-fluid w-50 p-4 p-md-0" alt="Home Image">
                     </div>
                     <div class="col-md-8">
                         <h4 class="fw-semibold">Find the Perfect Fit</h4>
                         <p class="text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-between align-items-center bg-white rounded-4 shadow py-3 px-2 mb-4">
+                <div class="row d-flex justify-content-between align-items-center bg-white rounded-4 shadow py-3 px-3 mb-4">
                     <div class="col-md-4 text-left">
-                        <img src="assets/images/icons/home.png" class="img-fluid w-75 p-3" alt="Home Image">
+                        <img src="assets/images/icons/home.png" class="img-fluid w-50 p-4 p-md-0" alt="Home Image">
                     </div>
                     <div class="col-md-8">
                         <h4 class="fw-semibold">Find the Perfect Fit</h4>
                         <p class="text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-between align-items-center bg-white rounded-4 shadow py-3 px-2 mb-4">
+                <div class="row d-flex justify-content-between align-items-center bg-white rounded-4 shadow py-3 px-3 mb-4">
                     <div class="col-md-4 text-left">
-                        <img src="assets/images/icons/home.png" class="img-fluid w-75 p-3" alt="Home Image">
+                        <img src="assets/images/icons/home.png" class="img-fluid w-50 p-4 p-md-0" alt="Home Image">
                     </div>
                     <div class="col-md-8">
                         <h4 class="fw-semibold">Find the Perfect Fit</h4>
@@ -236,7 +236,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-xl-6">
                 <img src="assets/images/icons/shopping-img.png" class="img-fluid p-3" alt="Shopping Image">
             </div>
         </div>
